--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/bcrypt": "^3.0.1",
+    "bcrypt": "^5.0.1",
     "dotenv": "^8.2.0",
     "export-to-csv": "^0.2.1",
     "express": "^4.17.1",
