--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@types/bcrypt": "^3.0.1",
     "bcrypt": "^5.0.1",
+    "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "export-to-csv": "^0.2.1",
     "express": "^4.17.1",
@@ -24,6 +25,7 @@
     "typescript": "^4.1.2"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.10",
     "@types/express": "^4.17.9",
     "@types/jest": "^26.0.18",
     "@types/jsonwebtoken": "^8.5.1",
