--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "knex": "^0.21.12",
     "objection": "^2.2.3",
     "sqlite3": "^5.0.0",
-    "typescript": "^4.1.2"
+    "typescript": "^4.1.2",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "@types/cors": "^2.8.10",
@@ -30,6 +31,7 @@
     "@types/jest": "^26.0.18",
     "@types/jsonwebtoken": "^8.5.1",
     "@types/supertest": "^2.0.10",
+    "@types/uuid": "^8.3.0",
     "jest": "^26.6.3",
     "supertest": "^6.0.1",
     "ts-jest": "^26.4.4",
