--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "scripts": {
     "test": "NODE_ENV=test jest",
     "start": "ts-node-dev src/app.ts",
-    "knex:migrate": "knex migrate:latest --knexfile knexfile.ts  migrate:latest"
+    "knex:migrate": "knex migrate:latest --knexfile knexfile.ts  migrate:latest",
+    "build": "mkdir build && tsc --outDir build && cp src/database/database.sqlite build/src/database",
+    "start:prod": "pm2 start build/src/app.js"
   },
   "keywords": [],
   "author": "",
@@ -33,6 +35,7 @@
     "@types/supertest": "^2.0.10",
     "@types/uuid": "^8.3.0",
     "jest": "^26.6.3",
+    "rimraf": "^3.0.2",
     "supertest": "^6.0.1",
     "ts-jest": "^26.4.4",
     "ts-node": "^9.1.1",
