--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "NODE_ENV=test jest",
     "start": "ts-node-dev src/app.ts",
     "knex:migrate": "knex migrate:latest --knexfile knexfile.ts  migrate:latest",
-    "build": "mkdir build && tsc --outDir build && cp src/database/database.sqlite build/src/database",
+    "build": "mkdir build && tsc --outDir build && cp src/database/database.sqlite build/src/database && cp .env build/",
     "start:prod": "pm2 start build/src/app.js"
   },
   "keywords": [],
