--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "NODE_ENV=test jest",
     "start": "ts-node-dev src/app.ts",
     "knex:migrate": "knex migrate:latest --knexfile knexfile.ts  migrate:latest",
-    "build": "rm -rf build && mkdir build && tsc --outDir build && cp src/database/database.sqlite build/src/database && cp .env build/",
+    "build": "rm -rf build && mkdir build && tsc --outDir build && cp ../dbBackup/database.sqlite build/src/database && cp .env build/",
     "start:prod": "pm2 start build/src/app.js",
     "backup": "cd ../ && rm -rf dbBackup && mkdir dbBackup && cp server/build/src/database/database.sqlite dbBackup"
   },
